--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -67,21 +67,9 @@ items:
     - name: Begränsningar för klientorganisation
       href: tenant-restrictions.md
   - name: Enkel inloggning
-    items:
-    - name: Översikt
-      href: what-is-single-sign-on.md
-    - name: Metoder för enkel inloggning
-      href: application-proxy-single-sign-on.md
-    - name: Välj en metod
-      href: single-sign-on-modes.md
-    - name: Upptäckt av hemsfär
-      href: configure-authentication-for-federated-users-portal.md
-    - name: Begränsad Kerberos-delegering (KCD)
-      href: application-proxy-configure-single-sign-on-with-kcd.md
-    - name: Lösenordsvalv
-      href: application-proxy-configure-single-sign-on-password-vaulting.md
-    - name: Rubriker
-      href: application-proxy-configure-single-sign-on-with-ping-access.md
+    href: what-is-single-sign-on.md
+  - name: Slutanvändarportaler
+    href: end-user-experiences.md
 - name: Instruktionsguider
   items:
   - name: Integration av en molnapp
@@ -200,6 +188,8 @@ items:
       href: disable-user-sign-in-portal.md
     - name: Konfigurera apptilldelning via självbetjäning
       href: manage-self-service-access.md
+    - name: Upptäckt av hemsfär
+      href: configure-authentication-for-federated-users-portal.md
   - name: Enkel inloggning
     items:
     - name: Konfigurera lösenord – inte galleriappar
@@ -220,6 +210,14 @@ items:
       href: configure-password-single-sign-on-non-gallery-applications.md
     - name: Vanliga problem vid konfiguration av lösenord – inte galleriappar
       href: configure-password-single-sign-on-non-gallery-applications-problems.md
+    - name: Programproxy
+      items:
+      - name: Begränsad Kerberos-delegering (KCD)
+        href: application-proxy-configure-single-sign-on-with-kcd.md
+      - name: Lösenordsvalv
+        href: application-proxy-configure-single-sign-on-password-vaulting.md
+      - name: Rubriker
+        href: application-proxy-configure-single-sign-on-with-ping-access.md
   - name: Åtkomstpanel
     items:
     - name: Hantera webbläsartillägg
@@ -286,9 +284,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-active-directory
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: 7114e27840d9a21701fe30537dbd6d533abaef7e
-ms.sourcegitcommit: 6135cd9a0dae9755c5ec33b8201ba3e0d5f7b5a1
+ms.openlocfilehash: 80153dcbb00c1d0ac9b0c1c3f87004ffd6f59b1f
+ms.sourcegitcommit: 1f9e1c563245f2a6dcc40ff398d20510dd88fd92
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/31/2018
-ms.locfileid: "50413986"
+ms.lasthandoff: 11/14/2018
+ms.locfileid: "51622796"
