--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -70,6 +70,8 @@ items:
     href: ../environment/intro.md
   - name: Utvecklarguide för Java
     href: app-service-linux-java.md
+  - name: Guide för Java Enterprise
+    href: app-service-java-enterprise.md
   - name: Inkommande och utgående IP-adresser
     href: ../app-service-ip-addresses.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
   - name: Autentisering och auktorisering
@@ -240,9 +242,9 @@ items:
         href: ../app-service-web-open-source-technologies-faq.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
       - name: Vanliga frågor och svar om konfiguration och hantering
         href: ../app-service-web-configuration-and-management-faq.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-ms.openlocfilehash: 08da442462083f86ba3c1c5a493d4fe97c760595
-ms.sourcegitcommit: 1fc949dab883453ac960e02d882e613806fabe6f
+ms.openlocfilehash: 7597b4ca76c16510458dee8e43072001f1d8b928
+ms.sourcegitcommit: 1f9e1c563245f2a6dcc40ff398d20510dd88fd92
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/03/2018
-ms.locfileid: "50978016"
+ms.lasthandoff: 11/14/2018
+ms.locfileid: "51621817"
