--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -117,7 +117,6 @@ items:
       - name: Vanliga frågor
         href: ../log-analytics/log-analytics-oms-portal-faq.md?toc=/azure/azure-monitor/toc.json
   - name: Svara på incidenter
-    href: ../monitoring-and-diagnostics/monitoring-overview-unified-alerts.md?toc=/azure/azure-monitor/toc.json
     items:
     - name: Aviseringar
       href: ../monitoring-and-diagnostics/monitoring-overview-alerts.md?toc=/azure/azure-monitor/toc.json
@@ -187,12 +186,12 @@ items:
     items:
     - name: Installera och konfigurera agenter
       items:
-      - name: Agentjämförelse
+      - name: Översikt över övervakningsagenter
         href: ../monitoring/monitoring-overview-azure-agents.md?toc=/azure/azure-monitor/toc.json
       - name: Log Analytics-agenter
         items:
-        - name: Övervaka hybridmiljöer
-          href: ../log-analytics/log-analytics-concept-hybrid.md?toc=/azure/azure-monitor/toc.json
+        - name: Översikt
+          href: ../log-analytics/log-analytics-agent-overview.md?toc=/azure/azure-monitor/toc.json
         - name: Windows-agenter
           href: ../log-analytics/log-analytics-agent-windows.md?toc=/azure/azure-monitor/toc.json
         - name: VM-tillägg för Windows
@@ -528,6 +527,8 @@ items:
           href: ../monitoring/monitoring-container-insights-analyze.md?toc=%2fazure%2fmonitoring%2ftoc.json
         - name: Inaktivera övervakning
           href: ../monitoring/monitoring-container-insights-optout.md?toc=%2fazure%2fmonitoring%2ftoc.json
+        - name: Uppgradera agent
+          href: ../monitoring/monitoring-container-insights-agent-upgrade.md?toc=%2fazure%2fmonitoring%2ftoc.json
         - name: Felsökning
           href: ../monitoring/monitoring-container-insights-troubleshoot.md
       - name: Övervakning av Docker- och Windows-containrar
@@ -1002,9 +1003,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: 91ca1cdeceb51b3839d22859829dc50af7dc2858
-ms.sourcegitcommit: 02ce0fc22a71796f08a9aa20c76e2fa40eb2f10a
+ms.openlocfilehash: 4015e5461f3323b6e1fc8e5ec6b0e695fc028373
+ms.sourcegitcommit: 1f9e1c563245f2a6dcc40ff398d20510dd88fd92
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/08/2018
-ms.locfileid: "51289112"
+ms.lasthandoff: 11/14/2018
+ms.locfileid: "51624122"
