--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -69,42 +69,48 @@ items:
     href: Concepts/data-sources-supported.md
 - name: Instruktionsguider
   items:
-  - name: Konfigurera en QnA Maker-tjänst
-    href: How-To/set-up-qnamaker-service-azure.md
-  - name: Skapa och publicera en kunskapsbas
-    href: Quickstarts/create-publish-knowledge-base.md
-  - name: Skapa en kunskapsbas
-    href: How-To/create-knowledge-base.md
-  - name: Lägga till konversationer i din kunskapsbas
-    href: How-to/chit-chat-knowledge-base.md
-  - name: Använda metadata med API för GenerateAnswer
-    href: How-To/metadata-generateanswer-usage.md
-  - name: Migrera en kunskapsbas från förhandsversionen
-    href: Tutorials/migrate-knowledge-base.md
-  - name: Redigera en kunskapsbas
-    href: How-To/edit-knowledge-base.md
-  - name: Samarbeta i en kunskapsbas
-    href: How-To/collaborate-knowledge-base.md
-  - name: Testa en kunskapsbas
-    href: How-To/test-knowledge-base.md
-  - name: Publicera en kunskapsbas
-    href: How-To/publish-knowledge-base.md
-  - name: Få analyser om din kunskapsbas
-    href: How-To/get-analytics-knowledge-base.md
-  - name: Hantera nycklar
-    href: How-To/key-management.md
-  - name: Skapa en kunskapsbas på ett annat språk
-    href: How-To/language-knowledge-base.md
-  - name: Integrera QnA Maker och LUIS
-    href: Tutorials/integrate-qnamaker-luis.md
-  - name: Skapa en affärskontinuitetsplan för QnA Maker
-    href: How-To/business-continuity-plan.md
-  - name: Välj kapacitet för din QnA Maker-distribution
-    href: Tutorials/choosing-capacity-qnamaker-deployment.md
-  - name: Uppgradera din QnA Maker-tjänst
-    href: How-To/upgrade-qnamaker-service.md
-  - name: Felsöka och uppdatera en QnAMaker-körning
-    href: How-To/troubleshooting-runtime.md
+  - name: Hantera kunskapsbas
+    items:
+    - name: Skapa och publicera en kunskapsbas
+      href: Quickstarts/create-publish-knowledge-base.md
+    - name: Skapa en kunskapsbas
+      href: How-To/create-knowledge-base.md
+    - name: Lägga till konversationer i din kunskapsbas
+      href: How-to/chit-chat-knowledge-base.md
+    - name: Använda metadata med API för GenerateAnswer
+      href: How-To/metadata-generateanswer-usage.md
+    - name: Migrera en kunskapsbas från förhandsversionen
+      href: Tutorials/migrate-knowledge-base.md
+    - name: Redigera en kunskapsbas
+      href: How-To/edit-knowledge-base.md
+    - name: Samarbeta i en kunskapsbas
+      href: How-To/collaborate-knowledge-base.md
+    - name: Skapa en kunskapsbas på ett annat språk
+      href: How-To/language-knowledge-base.md
+    - name: Publicera en kunskapsbas
+      href: How-To/publish-knowledge-base.md
+    - name: Testa en kunskapsbas
+      href: How-To/test-knowledge-base.md
+  - name: Integrera med andra tjänster
+    items:
+    - name: Integrera QnA Maker och LUIS
+      href: Tutorials/integrate-qnamaker-luis.md
+  - name: Hantera tjänst
+    items:
+    - name: Konfigurera en QnA Maker-tjänst
+      href: How-To/set-up-qnamaker-service-azure.md
+    - name: Få analyser om din kunskapsbas
+      href: How-To/get-analytics-knowledge-base.md
+    - name: Hantera nycklar
+      href: How-To/key-management.md
+    - name: Välj kapacitet för din QnA Maker-distribution
+      href: Tutorials/choosing-capacity-qnamaker-deployment.md
+    - name: Uppgradera din QnA Maker-tjänst
+      href: How-To/upgrade-qnamaker-service.md
+    - name: Skapa en affärskontinuitetsplan för QnA Maker
+      href: How-To/business-continuity-plan.md
+    - name: Felsöka och uppdatera en QnAMaker-körning
+      href: How-To/troubleshooting-runtime.md
   - name: Använda REST-API
     items:
     - name: C#
@@ -147,9 +153,9 @@ items:
     href: https://docs.microsoft.com/search/index?search=QnAMaker
   - name: Blogg
     href: https://blog.botframework.com/category/QnAMaker/
-ms.openlocfilehash: c376fc03f6dd884206373588c9277dfb224186cd
-ms.sourcegitcommit: ae45eacd213bc008e144b2df1b1d73b1acbbaa4c
+ms.openlocfilehash: 7bec0228aa8900f004aa61c2ae5316655628e101
+ms.sourcegitcommit: 1f9e1c563245f2a6dcc40ff398d20510dd88fd92
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/01/2018
-ms.locfileid: "50740067"
+ms.lasthandoff: 11/14/2018
+ms.locfileid: "51623537"
