--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -106,6 +106,16 @@ items:
   items:
   - name: Skapa användare
     href: howto-create-users.md
+  - name: Optimera
+    items:
+    - name: Massinfogning
+      href: howto-optimize-bulk-inserts.md
+    - name: Autovacuum
+      href: howto-optimize-autovacuum.md
+    - name: Samling med frågestatistik
+      href: howto-optimize-query-stats-collection.md
+    - name: Strategi för popup-tabell
+      href: howto-optimize-query-time-with-toast-table-storage-strategy.md
   - name: Hantera brandväggen
     items:
     - name: Azure Portal
@@ -204,9 +214,9 @@ items:
     href: partners-migration-postgresql.md
   - name: Guide för databasmigrering
     href: https://datamigration.microsoft.com/
-ms.openlocfilehash: 72cb09c49c25cd994a66ab0e32a324aeefeb06a7
-ms.sourcegitcommit: ba4570d778187a975645a45920d1d631139ac36e
+ms.openlocfilehash: 435201a225f2e6e2d3695f71fec93796d3437436
+ms.sourcegitcommit: 1f9e1c563245f2a6dcc40ff398d20510dd88fd92
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/08/2018
-ms.locfileid: "51280137"
+ms.lasthandoff: 11/14/2018
+ms.locfileid: "51622830"
