--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -65,9 +65,9 @@ items:
   - name: Övervaka data
     items:
     - name: Mått och loggar
-      href: ../monitoring/monitoring-data-collection.md?toc=/azure/azure-monitor/toc.json
+      href: platform/data-collection.md
     - name: Datakällor
-      href: ../monitoring/monitoring-data-sources.md?toc=/azure/azure-monitor/toc.json
+      href: platform/data-sources.md
     - name: Azure-datakällor
       href: ../monitoring-and-diagnostics/monitoring-data-sources.md?toc=/azure/azure-monitor/toc.json
     - name: Aktivitetslogg
@@ -187,7 +187,7 @@ items:
     - name: Installera och konfigurera agenter
       items:
       - name: Översikt över övervakningsagenter
-        href: ../monitoring/monitoring-overview-azure-agents.md?toc=/azure/azure-monitor/toc.json
+        href: platform/agents-overview.md
       - name: Log Analytics-agenter
         items:
         - name: Översikt
@@ -540,9 +540,9 @@ items:
     - name: Övervaka databaser
       items:
       - name: Azure SQL
-        href: ../log-analytics/log-analytics-azure-sql.md?toc=/azure/monitoring/toc.json
+        href: ../log-analytics/log-analytics-azure-sql.md?toc=/azure/azure-monitor/toc.json
       - name: SQL Server
-        href: ../log-analytics/log-analytics-sql-assessment.md?toc=/azure/monitoring/toc.json
+        href: ../log-analytics/log-analytics-sql-assessment.md?toc=/azure/azure-monitor/toc.json
     - name: Övervaka nätverk
       items:
       - name: Nätverksanalys
@@ -594,11 +594,11 @@ items:
       - name: Tjänstkarta
         items:
         - name: Användning
-          href: ../monitoring/monitoring-service-map.md?toc=/azure/azure-monitor/toc.json
+          href: insights/service-map.md
         - name: Konfigurera
-          href: ../monitoring/monitoring-service-map-configure.md?toc=/azure/azure-monitor/toc.json
+          href: insights/service-map-configure.md
         - name: Integration med Operations Manager
-          href: ../monitoring/monitoring-service-map-scom.md?toc=/azure/azure-monitor/toc.json
+          href: insights/service-map-scom.md
     - name: Övervaka Azure-resurser
       items:
       - name: Key Vault-analys
@@ -692,6 +692,8 @@ items:
           href: ../log-analytics/query-language/advanced-query-writing.md?toc=/azure/azure-monitor/toc.json
         - name: Grafer och diagram
           href: ../log-analytics/query-language/charts.md?toc=/azure/azure-monitor/toc.json
+        - name: Functions
+          href: ../log-analytics/query-language/functions.md?toc=/azure/azure-monitor/toc.json
       - name: Översiktsblad
         items:
         - name: SQL
@@ -899,7 +901,7 @@ items:
       - name: Bästa praxis
         href: insights/solutions-best-practices.md
       - name: Samla in övervakningsdata från ett runbook-flöde
-        href: ../monitoring/monitoring-runbook-datacollect.md?toc=/azure/azure-monitor/toc.json
+        href: platform/runbook-datacollect.md
 - name: Referens
   items:
   - name: Application Insights
@@ -1003,9 +1005,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: 41881a2a7073a53a2d2831bdafcd1496e2357d89
-ms.sourcegitcommit: a4e4e0236197544569a0a7e34c1c20d071774dd6
+ms.openlocfilehash: 763fc0139f3de48bb3a4285ab64c9015d4cb4d2a
+ms.sourcegitcommit: 7804131dbe9599f7f7afa59cacc2babd19e1e4b9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/15/2018
-ms.locfileid: "51711947"
+ms.lasthandoff: 11/17/2018
+ms.locfileid: "51853854"
