--- a/articles/data-explorer/toc.yml
+++ b/articles/data-explorer/toc.yml
@@ -17,15 +17,20 @@ items:
       href: python-ingest-data.md
     - name: Batchbearbeta data – Node SDK
       href: node-ingest-data.md
-    expanded: true
   - name: Söka i data
     items:
     - name: Webbgränssnitt
       href: web-query-data.md
     - name: Python
       href: python-query-data.md
-    expanded: true
-  expanded: true
+  - name: Visualisera data
+    items:
+    - name: Power BI – anslutningsapp
+      href: power-bi-connector.md
+    - name: Power BI – importerad fråga
+      href: power-bi-imported-query.md
+    - name: Power BI – SQL-fråga
+      href: power-bi-sql-query.md
 - name: Självstudier
   items:
   - name: Visualisera data – Power BI
@@ -33,9 +38,11 @@ items:
 - name: Begrepp
   items:
   - name: Översikt över datainmatning
+    displayName: pipelines, connectors, plugins, Python, .NET, Java, Node, REST
     href: ingest-data-overview.md
   - name: Time Series-analys
     href: time-series-analysis.md
+  expanded: true
 - name: Instruktionsguider
   items:
   - name: Skriva frågor
@@ -90,9 +97,9 @@ items:
     href: http://aka.ms/adecostestimator
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=data-explorer
-ms.openlocfilehash: 21033669a37e6333e12476c67d96b8ffc52458bd
-ms.sourcegitcommit: 1b186301dacfe6ad4aa028cfcd2975f35566d756
+ms.openlocfilehash: 2a46211975e094db74b501285b9725d78ddd4166
+ms.sourcegitcommit: 7804131dbe9599f7f7afa59cacc2babd19e1e4b9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/06/2018
-ms.locfileid: "51218246"
+ms.lasthandoff: 11/17/2018
+ms.locfileid: "51852028"
