--- a/articles/cognitive-services/Content-Moderator/toc.yml
+++ b/articles/cognitive-services/Content-Moderator/toc.yml
@@ -100,12 +100,10 @@ items:
       href: ecommerce-retail-catalog-moderation.md
     - name: Video- och avskriftsmoderering
       href: video-transcript-moderation-review-tutorial-dotnet.md
-- name: Exempel
-  items:
-  - name: .NET SDK-exempel
-    href: samples-dotnet.md
-  - name: REST API-exempel i C#
-    href: samples-rest.md
+  - name: Exportera eller ta bort kontodata
+    href: ./export-delete-data.md
+  - name: Azure-webbseminarserie
+    href: https://info.microsoft.com/cognitive-services-content-moderator-ondemand.html
 - name: Referens
   items:
   - name: API för Content Moderator
@@ -122,29 +120,33 @@ items:
       href: https://www.nuget.org/packages/Microsoft.Azure.CognitiveServices.ContentModerator
 - name: Resurser
   items:
+  - name: Exempel
+    items:
+    - name: .NET SDK-exempel
+      href: samples-dotnet.md
+    - name: REST API-exempel i C#
+      href: samples-rest.md
+    - name: Andra Azure-exempel
+      href: https://azure.microsoft.com/resources/samples/?service=cognitive-services&term=content+moderator
   - name: VANLIGA FRÅGOR OCH SVAR
     href: FAQs.md
-  - name: Stöd för språk och region
-    href: language-support.md
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Priser och begränsningar
     href: https://azure.microsoft.com/pricing/details/cognitive-services/content-moderator
-  - name: Exportera eller ta bort kontodata
-    href: ./export-delete-data.md
   - name: UserVoice
     href: https://cognitive.uservoice.com/forums/559960-content-moderator
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/microsoft-cognitive
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase/topics/132073-content-moderator
+  - name: Stöd för språk
+    href: language-support.md
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/microsoft-cognitive
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=ai-machine-learning
-  - name: Webbseminarium på begäran
-    href: https://info.microsoft.com/cognitive-services-content-moderator-ondemand.html
-ms.openlocfilehash: 69f3e50614340b610438cdae1cac20e263d0f618
-ms.sourcegitcommit: 7804131dbe9599f7f7afa59cacc2babd19e1e4b9
+    href: https://azure.microsoft.com/global-infrastructure/services/?products=cognitive-services
+ms.openlocfilehash: f7072fef1d0dea42d20f5cdd5a98dd5c7c20713f
+ms.sourcegitcommit: 8d88a025090e5087b9d0ab390b1207977ef4ff7c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/17/2018
-ms.locfileid: "51852222"
+ms.lasthandoff: 11/21/2018
+ms.locfileid: "52276422"
