--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -154,12 +154,12 @@ items:
       href: access-secrets-from-keyvault.md
   - name: Företagsberedskap
     items:
+    - name: Säkerhetskopiering och återställning online
+      href: online-backup-and-restore.md
     - name: Efterlevnad
       href: compliance.md
   - name: Förskottsbetalning för reserverad kapacitet
     href: cosmos-db-reserved-capacity.md
-  - name: Säkerhetskopiering och återställning
-    href: online-backup-and-restore.md
 - name: API:er för flera modeller
   items:
   - name: SQL API-dokument
@@ -453,6 +453,10 @@ items:
       href: how-to-configure-firewall.md
     - name: Konfigurera åtkomst till virtuella nätverk
       href: how-to-configure-vnet-service-endpoint.md
+  - name: Företagsberedskap
+    items:
+    - name: Återställa data från en säkerhetskopia
+      href: how-to-backup-and-restore.md
   - name: Hantera
     items:
     - name: Hantera med hjälp av PowerShell
@@ -573,9 +577,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: 39b551b12f80a54a8c374e0ac0980c8c746ef3b3
-ms.sourcegitcommit: ebf2f2fab4441c3065559201faf8b0a81d575743
+ms.openlocfilehash: be2c50fb19746f15d879ada3ccbdc4366a4c4763
+ms.sourcegitcommit: fa758779501c8a11d98f8cacb15a3cc76e9d38ae
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 11/20/2018
-ms.locfileid: "52162533"
+ms.locfileid: "52262541"
