--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -17,6 +17,8 @@ items:
     href: detailed-troubleshoot-rdp.md
   - name: Felsöka RDP-fel på grund av att DHCP är inaktiverat
     href: troubleshoot-rdp-dhcp-disabled.md
+  - name: Felsöka RDP-fel på grund av NSG-inställningen
+    href: troubleshoot-rdp-nsg-problem.md
   - name: Felsöka specifika fel
     href: troubleshoot-specific-rdp-errors.md
   - name: Felsöka fel utan licensserver
@@ -149,9 +151,9 @@ items:
   href: understand-vm-reboot.md
 - name: Fjärrfelsökningsverktyg
   href: remote-tools-troubleshoot-azure-vm-issues.md
-ms.openlocfilehash: 4b4202e0eb155e80b86332287ba4ed3a37a24741
-ms.sourcegitcommit: 275eb46107b16bfb9cf34c36cd1cfb000331fbff
+ms.openlocfilehash: fbbc44073d4cb27222800943826ab7a177709833
+ms.sourcegitcommit: fa758779501c8a11d98f8cacb15a3cc76e9d38ae
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/15/2018
-ms.locfileid: "51705624"
+ms.lasthandoff: 11/20/2018
+ms.locfileid: "52260637"
